# ResearchPulse

./: .dockerignore  .env.example  Claude.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.old
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
config/: llm.yaml  social.yaml  tracking.yaml
src/: analyzer.py  generator.py  insights.py  main.py  processor.py
src/fetchers/: arxiv_fetcher.py  base.py  coordinator.py  semantic_scholar_fetcher.py
src/social/: coordinator.py  github_tracker.py  google_search_tracker.py  hackernews_tracker.py  reddit_tracker.py
templates/: daily_feed.html  index.html
templates/static/: script.js  style.css
tests/: README.md  conftest.py
tests/unit/: test_analyzer.py  test_insights.py  test_paper_model.py  test_processor.py
tests/unit/fetchers/: test_arxiv_fetcher.py  test_fetcher_coordinator.py  test_semantic_scholar_fetcher.py
