[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpulse"
version = "0.1.0"
description = "AI-powered research paper aggregator that captures the pulse of scientific research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "ResearchPulse Contributors"}
]
keywords = [
    "research",
    "papers",
    "arxiv",
    "ai",
    "llm",
    "aggregator",
    "academic",
    "science"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",

    # LLM Providers
    "anthropic==0.18.1",
    "openai==1.12.0",
    "google-generativeai==0.3.2",

    # Paper sources
    "arxiv==2.1.0",
    "scholarly==1.7.11",
    "semanticscholar==0.5.0",

    # Social media
    "praw==7.7.1",  # Reddit
    "PyGithub==2.1.1",

    # Google Custom Search
    "google-api-python-client==2.116.0",

    # Web scraping & HTTP
    "httpx==0.26.0",
    "aiohttp==3.9.3",

    # Data processing
    "pandas==2.1.4",
    "numpy==1.26.3",

    # HTML/Markdown generation
    "jinja2==3.1.3",
    "markdown==3.5.2",
    "python-dateutil==2.8.2",

    # Utilities
    "schedule==1.2.1",
    "tqdm==4.66.1",
    "colorlog==6.8.2",

    # NLP utilities
    "nltk==3.8.1",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "responses==0.24.1",
    "freezegun==1.4.0",
]

dev = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "responses==0.24.1",
    "freezegun==1.4.0",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/dengzeyu/ResearchPulse"
Repository = "https://github.com/dengzeyu/ResearchPulse"
Issues = "https://github.com/dengzeyu/ResearchPulse/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fetchers", "social"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.html", "*.css", "*.js"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
    "api: Tests that interact with external APIs (mocked)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
